--- a/Tests/TestFromOj/point/Makefile
+++ b/Tests/TestFromOj/point/Makefile
@@ -1,4 +1,8 @@
-JAVA_PATH=/usr/lib/jvm/java-7-oracle/
+#HOME
+#JAVA_PATH=/usr/lib/jvm/java-7-oracle
+
+#ARI :
+JAVA_PATH=/usr/lib/jvm/jdk1.7.0_07
 
 JAVA=$(JAVA_PATH)/bin/java
 JAVAC=$(JAVA_PATH)/bin/javac
