--- a/Tests/TestFromOj/test/Makefile
+++ b/Tests/TestFromOj/test/Makefile
@@ -1,7 +1,7 @@
 #HOME
-#JAVA_PATH=/usr/lib/jvm/java-7-oracle
+JAVA_PATH=/usr/lib/jvm/java-7-oracle
 #ARI :
-JAVA_PATH=/usr/lib/jvm/jdk1.7.0_07
+#JAVA_PATH=/usr/lib/jvm/jdk1.7.0_07
 
 JAVA=$(JAVA_PATH)/bin/java
 JAVAC=$(JAVA_PATH)/bin/javac
