--- a/Tests/NewOjacare/VisitorML/Makefile
+++ b/Tests/NewOjacare/VisitorML/Makefile
@@ -3,9 +3,9 @@ NAME=formule
 MAIN=main-visitorML
 
 #HOME
-JAVA_PATH=/usr/lib/jvm/java-7-oracle
+#JAVA_PATH=/usr/lib/jvm/java-7-oracle
 #ARI :
-#JAVA_PATH=/usr/lib/jvm/jdk1.7.0_07
+JAVA_PATH=/usr/lib/jvm/jdk1.7.0_07
 
 JAVA=$(JAVA_PATH)/bin/java
 JAVAC=$(JAVA_PATH)/bin/javac
